selfhost/test/typechecker/array_error_type_mismatch_bindingdecl.2.out
Error at %FILE_NAME%:1:19
Type mismatch
  |  val a: String[] = "abcd"
                       ^
Expected: String[]
but instead found: String
